<?xml version="1.0" encoding="utf-8" ?>
<!-- 
 Copyright 2014 ReliQ Artz
	
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at
	
	http://www.apache.org/licenses/LICENSE-2.0
	
 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->
<resources>

    <string name="app_name">First Tip Calculator &amp; Advisor</string>
    <string name="app_shortname">First Tip</string>
    <string name="app_description">A simple, full-featured Tip Calculator &amp; Advisor.</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Reset</string>
    <string name="action_feedback">Send Feedback</string>
    <string name="bill_text_view">Bill:</string>
    <string name="dollar_text_view">$</string>
    <string name="bill_edit_text">0.0</string>
    <string name="bill_bg_image_desc">Bill and tip background</string>
    <string name="tip_text_view">Base Tip:</string>
    <string name="tip_seekbar_text_view">Tip</string>
    <string name="tip_edit_text">5%</string>
    <string name="dollar_sign_text">Dollar Sign</string>
    <string name="final_tip_text_view">Final Tip</string>
    <string name="final_text_view">Final Bill</string>
    <string name="final_bill_edit_text">$0.0</string>
    <string name="final_tip_percentage_edit_text">5%</string>
    <string name="final_tip_edit_text">$0.0</string>
    <string name="change_tip_text_view">Change Tip</string>
    <string name="auto_tipping_text_view">Waiter/Waitress Rating</string>
    <string name="intro_text_view">Introduction &amp; Behaviour</string>
    <string name="intro_friendly_text_view">Made a friendly introduction</string>
    <string name="intro_courtesy_text_view">Used elements of courtesy (ie. \'please\' &amp; \'thank you\')</string>
    <string name="intro_specials_text_view">Requested permission to announce specials</string>
    <string name="intro_opinion_text_view">Offered assistance with menu selections</string>
    <string name="intro_pro_text_view">Acted in a professional Manner</string>
    <string name="traits_text_view">Good Traits</string>
    <string name="traits_attentive_text_view">Remained attentive</string>
    <string name="traits_groomed_text_view">Server was well-groomed</string>
    <string name="traits_judgement_text_view">Showed good judgement</string>
    <string name="rules_text_view">Common Serving Rules</string>
    <string name="rules_food_text_view">Served food from my left side</string>
    <string name="rules_drinks_text_view">Poured drinks from my right side</string>
    <string name="traits_clear_text_view">Cleared table from my right side</string>
    <string name="available_text_view">Availability</string>
    <string name="available_bad_radiobutton">Bad</string>
    <string name="available_ok_radiobutton">OK</string>
    <string name="available_good_radiobutton">Good</string>
    <string name="problems_text_view">Problems Solving Skills</string>
	<string name="cancel_text">Cancel</string>
	
    <string-array name="problem_solving">
        <item>No Problem Encountered</item>
        <item>Bad</item>
        <item>OK</item>
        <item>Good</item>
    </string-array>
	
    <string name="split_for_text_view">Split for: </string>
    <string name="split_rb_equally">equally</string>
    <string name="split_rb_ratio">by ratio</string>
    <string name="split_info_text_view">Calculated cost(s) per person will be shown below.</string>
    <string name="split_on_text_view">Split on ratio:</string>
    <string name="split_ratio_text_view">1:1</string> 
    <string name="each_pays_text_view">Each person pays:</string>
    
    <string-array name="split_for">
        <item>2 people</item>
        <item>3 people</item>
        <item>4 people</item>
        <item>5 people</item>
        <item>6 people</item>
        <item>7 people</item>
        <item>8 people</item>
    	<item>9 people</item>
    	<item>10 people</item>
    	<item>11 people</item>
    	<item>12 people</item>
    </string-array>
    
    <string name="ratio_no_bill_warning">You must enter a bill amount to split by ratio.</string> 
    <string name="ratio_hint_text">Enter a ratio containing %1$d proportions separated by \":\" below (eg. 5:3:1):</string> 
     <string name="ratio_invalid">Invalid ratio for %1$d way split. Please provide %1$d proportions.</string> 
    
    <string name="title_activity_main">Tip Calculator &amp; Advisor</string>
    <string name="title_section1">Calculate</string>
    <string name="title_section2">Split</string>
    <string name="title_activity_preferences">Settings</string>
    <string name="title_ratio_dialog">Ratio</string>

</resources>
